applications/xihe-test-v2/hook-delivery/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: xihe-ingress
  namespace: xihe-test-v2
spec:
  rules:
  - host: xihe-hook-delivery2.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: service-hook-delivery
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - xihe-hook-delivery2.test.osinfra.cn
    secretName: xihe-test-osinfra-cn-tls
